from dataclasses import dataclass


@dataclass
class Tag:
    id: int
    title: str
